Finish phone fax and language

--- a/HITSW/HITSW/HITSW.csproj
+++ b/HITSW/HITSW/HITSW.csproj
@@ -189,9 +189,11 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Class\Utils.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\AddrBkLanguageController.cs" />
     <Compile Include="Controllers\AddrBkOrganizationUnitController.cs" />
     <Compile Include="Controllers\AddrBkOrganizationUnitMemberController.cs" />
     <Compile Include="Controllers\AddrBkPersonController.cs" />
+    <Compile Include="Controllers\AddrBkPhoneFaxController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Filters\InitializeSimpleMembershipAttribute.cs" />
     <Compile Include="Global.asax.cs">
@@ -454,6 +456,14 @@
     <Content Include="Views\AddrBkOrganizationUnitMember\_Edit.cshtml" />
     <Content Include="Views\AddrBkOrganizationUnitMember\_Index.cshtml" />
     <Content Include="Views\AddrBkOrganizationUnitMember\_Members.cshtml" />
+    <Content Include="Views\AddrBkPhoneFax\_Create.cshtml" />
+    <Content Include="Views\AddrBkPhoneFax\_Edit.cshtml" />
+    <Content Include="Views\AddrBkPhoneFax\_Index.cshtml" />
+    <Content Include="Views\AddrBkPhoneFax\_PhoneFax.cshtml" />
+    <Content Include="Views\AddrBkLanguage\_Create.cshtml" />
+    <Content Include="Views\AddrBkLanguage\_Edit.cshtml" />
+    <Content Include="Views\AddrBkLanguage\_Index.cshtml" />
+    <Content Include="Views\AddrBkLanguage\_Language.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
