--- a/HITSW/HITSW/HITSW.csproj
+++ b/HITSW/HITSW/HITSW.csproj
@@ -189,6 +189,7 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Class\Utils.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\AddrBkIdentificationController.cs" />
     <Compile Include="Controllers\AddrBkIndustryAffliationController.cs" />
     <Compile Include="Controllers\AddrBkInterestedProductServicesController.cs" />
     <Compile Include="Controllers\AddrBkLanguageController.cs" />
@@ -196,6 +197,7 @@
     <Compile Include="Controllers\AddrBkOrganizationUnitMemberController.cs" />
     <Compile Include="Controllers\AddrBkPersonController.cs" />
     <Compile Include="Controllers\AddrBkPhoneFaxController.cs" />
+    <Compile Include="Controllers\AddrBkRelationController.cs" />
     <Compile Include="Controllers\AddrBkVirtualAddressController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Filters\InitializeSimpleMembershipAttribute.cs" />
@@ -479,6 +481,18 @@
     <Content Include="Views\AddrBkVirtualAddress\_Edit.cshtml" />
     <Content Include="Views\AddrBkVirtualAddress\_Index.cshtml" />
     <Content Include="Views\AddrBkVirtualAddress\_VirtualAddress.cshtml" />
+    <Content Include="Views\AddrBkIdentification\_CreateIndv.cshtml" />
+    <Content Include="Views\AddrBkIdentification\_CreateOrg.cshtml" />
+    <Content Include="Views\AddrBkIdentification\_EditIndv.cshtml" />
+    <Content Include="Views\AddrBkIdentification\_EditOrg.cshtml" />
+    <Content Include="Views\AddrBkIdentification\_IndexIndv.cshtml" />
+    <Content Include="Views\AddrBkIdentification\_IndexOrg.cshtml" />
+    <Content Include="Views\AddrBkRelation\_CreateIndv.cshtml" />
+    <Content Include="Views\AddrBkRelation\_CreateOrg.cshtml" />
+    <Content Include="Views\AddrBkRelation\_EditIndv.cshtml" />
+    <Content Include="Views\AddrBkRelation\_EditOrg.cshtml" />
+    <Content Include="Views\AddrBkRelation\_IndexIndv.cshtml" />
+    <Content Include="Views\AddrBkRelation\_IndexOrg.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
