--- a/HITSW/HITSW/HITSW.csproj
+++ b/HITSW/HITSW/HITSW.csproj
@@ -191,6 +191,7 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\AddrBkContactAddressController.cs" />
     <Compile Include="Controllers\AddrBkGeographicalGroupController.cs" />
+    <Compile Include="Controllers\AddrBkGeographicalGroupMemberController.cs" />
     <Compile Include="Controllers\AddrBkHobbyController.cs" />
     <Compile Include="Controllers\AddrBkIdentificationController.cs" />
     <Compile Include="Controllers\AddrBkIndustryAffliationController.cs" />
@@ -521,6 +522,10 @@
     <Content Include="Views\AddrBkGeographicalGroup\Edit.cshtml" />
     <Content Include="Views\AddrBkGeographicalGroup\Delete.cshtml" />
     <Content Include="Views\AddrBkGeographicalGroup\_Group.cshtml" />
+    <Content Include="Views\AddrBkGeographicalGroupMember\_CreateCountry.cshtml" />
+    <Content Include="Views\AddrBkGeographicalGroupMember\_EditCountry.cshtml" />
+    <Content Include="Views\AddrBkGeographicalGroupMember\_IndexCountry.cshtml" />
+    <Content Include="Views\AddrBkGeographicalGroupMember\_MembersCountry.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
