--- a/HITSW/HITSW/Web.config
+++ b/HITSW/HITSW/Web.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
@@ -9,10 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-HITSW-20131010080640;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-HITSW-20131010080640.mdf"
-      providerName="System.Data.SqlClient" />
-    <add name="HITSWContext" connectionString="Data Source=TOUFIQ-PC;Initial Catalog=HITSW;Persist Security Info=True;User ID=sa;Password=rajib;MultipleActiveResultSets=True"
-      providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-HITSW-20131010080640;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-HITSW-20131010080640.mdf" providerName="System.Data.SqlClient" />
+    <add name="HITSWContext" connectionString="Data Source=TOUFIQ-PC;Initial Catalog=HITSW;Persist Security Info=True;User ID=sa;Password=rajib;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
