Finish edit city/ton of geographical group

--- a/HITSW/HITSW/HITSW.csproj
+++ b/HITSW/HITSW/HITSW.csproj
@@ -536,6 +536,7 @@
     <Content Include="Views\AddrBkGeographicalGroupMember\_EditContinent.cshtml" />
     <Content Include="Views\AddrBkGeographicalGroupMember\_MembersCity.cshtml" />
     <Content Include="Views\AddrBkGeographicalGroupMember\_CreateCity.cshtml" />
+    <Content Include="Views\AddrBkGeographicalGroupMember\_EditCity.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
